fix:AdminNiveisAppService e AdminCategoriasAppServices